test/corpus/captures.txt
================================================================================
Captures
================================================================================

var = ${value}

--------------------------------------------------------------------------------

(module
  (expression_statement
    (assignment
      (identifier)
      (capture
        (identifier)))))

================================================================================
Captures from import module
================================================================================

from ${module_name} import ${import_name}

--------------------------------------------------------------------------------

(module
  (import_from_statement
    (capture
      (identifier))
    (capture
      (identifier))))
